@@ -1,3 +1,5 @@
+#define FLASH_PAGE_SIZE 1024
+
 #define STM32_PLLXTPRE			STM32_PLLXTPRE_DIV1
 #define STM32_PLLMUL_VALUE		6
 #define STM32_HSECLK			12000000
